// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wrap-vitest-suite-traces captures wrapped Vitest task spans (v2 (e2e default)) > log-payloads-v2 (e2e default) 1`] = `
[
  {
    "_is_merge": false,
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "Module.runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "experiment_id": "<uuid:3>",
    "id": "<span:1>",
    "metadata": {
      "case": "simple-pass",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "start": 0,
    },
    "root_span_id": "<span:2>",
    "span_attributes": {
      "exec_counter": 0,
      "name": "vitest simple pass",
      "type": "task",
    },
    "span_id": "<span:2>",
  },
  {
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "Module.runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "expected": 10,
    "experiment_id": "<uuid:3>",
    "id": "<span:4>",
    "input": {
      "value": 5,
    },
    "metadata": {
      "case": "configured-span",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "end": 0,
      "start": 0,
    },
    "output": {
      "phase": "configured-span",
      "result": 10,
    },
    "root_span_id": "<span:5>",
    "scores": {
      "correctness": 1,
      "pass": 1,
      "quality": 0.9,
    },
    "span_attributes": {
      "exec_counter": 1,
      "name": "vitest configured span",
      "type": "task",
    },
    "span_id": "<span:5>",
    "tags": [
      "math",
      "configured",
    ],
  },
  {
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "Module.runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "experiment_id": "<uuid:3>",
    "id": "<span:6>",
    "metadata": {
      "case": "concurrent-alpha",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "end": 0,
      "start": 0,
    },
    "output": {
      "phase": "concurrent-alpha",
    },
    "root_span_id": "<span:7>",
    "scores": {
      "pass": 1,
    },
    "span_attributes": {
      "exec_counter": 2,
      "name": "vitest concurrent alpha",
      "type": "task",
    },
    "span_id": "<span:7>",
  },
  {
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "Module.runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "experiment_id": "<uuid:3>",
    "id": "<span:8>",
    "metadata": {
      "case": "concurrent-beta",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "end": 0,
      "start": 0,
    },
    "output": {
      "phase": "concurrent-beta",
    },
    "root_span_id": "<span:9>",
    "scores": {
      "pass": 1,
    },
    "span_attributes": {
      "exec_counter": 3,
      "name": "vitest concurrent beta",
      "type": "task",
    },
    "span_id": "<span:9>",
  },
  {
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "Module.runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "error": "expected 'wrong' to be 'right' // Object.is equality

AssertionError: expected 'wrong' to be 'right' // Object.is equality
    at <repo>/e2e/scenarios/wrap-vitest-suite-traces/runner.case.ts:0:0
    at Object.fn (<repo>/js/src/wrappers/vitest/wrapper.ts:0:0)
    at args.experiment.traced.name (<repo>/js/src/wrappers/shared/traced-eval.ts:0:0)
    at <repo>/js/src/logger.ts:0:0
    at AsyncLocalStorage.run (node:<internal>:0:0)
    at BraintrustContextManager.runInContext (<repo>/js/src/logger.ts:0:0)
    at withCurrent (<repo>/js/src/logger.ts:0:0)
    at <repo>/js/src/logger.ts:0:0
    at Module.runCatchFinally (<repo>/js/src/util.ts:0:0)
    at Experiment.traced (<repo>/js/src/logger.ts:0:0)",
    "experiment_id": "<uuid:3>",
    "id": "<span:10>",
    "metadata": {
      "case": "expected-failure",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "end": 0,
      "start": 0,
    },
    "output": {
      "phase": "expected-failure",
    },
    "root_span_id": "<span:11>",
    "scores": {
      "pass": 0,
    },
    "span_attributes": {
      "exec_counter": 4,
      "name": "vitest expected failure",
      "type": "task",
    },
    "span_id": "<span:11>",
  },
]
`;

exports[`wrap-vitest-suite-traces captures wrapped Vitest task spans (v2 (e2e default)) > span-events-v2 (e2e default) 1`] = `
[
  {
    "has_input": false,
    "has_output": true,
    "metadata": {
      "case": "simple-pass",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest simple pass",
    "root_span_id": "<span:1>",
    "span_id": "<span:1>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": true,
    "has_output": true,
    "metadata": {
      "case": "configured-span",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest configured span",
    "root_span_id": "<span:2>",
    "span_id": "<span:2>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": false,
    "has_output": true,
    "metadata": {
      "case": "concurrent-alpha",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest concurrent alpha",
    "root_span_id": "<span:3>",
    "span_id": "<span:3>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": false,
    "has_output": true,
    "metadata": {
      "case": "concurrent-beta",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest concurrent beta",
    "root_span_id": "<span:4>",
    "span_id": "<span:4>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": false,
    "has_output": true,
    "metadata": {
      "case": "expected-failure",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest expected failure",
    "root_span_id": "<span:5>",
    "span_id": "<span:5>",
    "span_parents": [],
    "type": "task",
  },
]
`;

exports[`wrap-vitest-suite-traces captures wrapped Vitest task spans (v3) > log-payloads-v3 1`] = `
[
  {
    "_is_merge": false,
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "experiment_id": "<uuid:3>",
    "id": "<span:1>",
    "metadata": {
      "case": "simple-pass",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "start": 0,
    },
    "root_span_id": "<span:2>",
    "span_attributes": {
      "exec_counter": 0,
      "name": "vitest simple pass",
      "type": "task",
    },
    "span_id": "<span:2>",
  },
  {
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "expected": 10,
    "experiment_id": "<uuid:3>",
    "id": "<span:4>",
    "input": {
      "value": 5,
    },
    "metadata": {
      "case": "configured-span",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "end": 0,
      "start": 0,
    },
    "output": {
      "phase": "configured-span",
      "result": 10,
    },
    "root_span_id": "<span:5>",
    "scores": {
      "correctness": 1,
      "pass": 1,
      "quality": 0.9,
    },
    "span_attributes": {
      "exec_counter": 1,
      "name": "vitest configured span",
      "type": "task",
    },
    "span_id": "<span:5>",
    "tags": [
      "math",
      "configured",
    ],
  },
  {
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "experiment_id": "<uuid:3>",
    "id": "<span:6>",
    "metadata": {
      "case": "concurrent-alpha",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "end": 0,
      "start": 0,
    },
    "output": {
      "phase": "concurrent-alpha",
    },
    "root_span_id": "<span:7>",
    "scores": {
      "pass": 1,
    },
    "span_attributes": {
      "exec_counter": 2,
      "name": "vitest concurrent alpha",
      "type": "task",
    },
    "span_id": "<span:7>",
  },
  {
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "experiment_id": "<uuid:3>",
    "id": "<span:8>",
    "metadata": {
      "case": "concurrent-beta",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "end": 0,
      "start": 0,
    },
    "output": {
      "phase": "concurrent-beta",
    },
    "root_span_id": "<span:9>",
    "scores": {
      "pass": 1,
    },
    "span_attributes": {
      "exec_counter": 3,
      "name": "vitest concurrent beta",
      "type": "task",
    },
    "span_id": "<span:9>",
  },
  {
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "error": "expected 'wrong' to be 'right' // Object.is equality

AssertionError: expected 'wrong' to be 'right' // Object.is equality
    at <repo>/e2e/scenarios/wrap-vitest-suite-traces/runner.case.ts:0:0
    at Object.fn (<repo>/js/src/wrappers/vitest/wrapper.ts:0:0)
    at args.experiment.traced.name (<repo>/js/src/wrappers/shared/traced-eval.ts:0:0)
    at <repo>/js/src/logger.ts:0:0
    at AsyncLocalStorage.run (node:<internal>:0:0)
    at BraintrustContextManager.runInContext (<repo>/js/src/logger.ts:0:0)
    at withCurrent (<repo>/js/src/logger.ts:0:0)
    at <repo>/js/src/logger.ts:0:0
    at runCatchFinally (<repo>/js/src/util.ts:0:0)
    at Experiment.traced (<repo>/js/src/logger.ts:0:0)",
    "experiment_id": "<uuid:3>",
    "id": "<span:10>",
    "metadata": {
      "case": "expected-failure",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "end": 0,
      "start": 0,
    },
    "output": {
      "phase": "expected-failure",
    },
    "root_span_id": "<span:11>",
    "scores": {
      "pass": 0,
    },
    "span_attributes": {
      "exec_counter": 4,
      "name": "vitest expected failure",
      "type": "task",
    },
    "span_id": "<span:11>",
  },
]
`;

exports[`wrap-vitest-suite-traces captures wrapped Vitest task spans (v3) > span-events-v3 1`] = `
[
  {
    "has_input": false,
    "has_output": true,
    "metadata": {
      "case": "simple-pass",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest simple pass",
    "root_span_id": "<span:1>",
    "span_id": "<span:1>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": true,
    "has_output": true,
    "metadata": {
      "case": "configured-span",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest configured span",
    "root_span_id": "<span:2>",
    "span_id": "<span:2>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": false,
    "has_output": true,
    "metadata": {
      "case": "concurrent-alpha",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest concurrent alpha",
    "root_span_id": "<span:3>",
    "span_id": "<span:3>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": false,
    "has_output": true,
    "metadata": {
      "case": "concurrent-beta",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest concurrent beta",
    "root_span_id": "<span:4>",
    "span_id": "<span:4>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": false,
    "has_output": true,
    "metadata": {
      "case": "expected-failure",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest expected failure",
    "root_span_id": "<span:5>",
    "span_id": "<span:5>",
    "span_parents": [],
    "type": "task",
  },
]
`;

exports[`wrap-vitest-suite-traces captures wrapped Vitest task spans (v4) > log-payloads-v4 1`] = `
[
  {
    "_is_merge": false,
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "experiment_id": "<uuid:3>",
    "id": "<span:1>",
    "metadata": {
      "case": "simple-pass",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "start": 0,
    },
    "root_span_id": "<span:2>",
    "span_attributes": {
      "exec_counter": 0,
      "name": "vitest simple pass",
      "type": "task",
    },
    "span_id": "<span:2>",
  },
  {
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "expected": 10,
    "experiment_id": "<uuid:3>",
    "id": "<span:4>",
    "input": {
      "value": 5,
    },
    "metadata": {
      "case": "configured-span",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "end": 0,
      "start": 0,
    },
    "output": {
      "phase": "configured-span",
      "result": 10,
    },
    "root_span_id": "<span:5>",
    "scores": {
      "correctness": 1,
      "pass": 1,
      "quality": 0.9,
    },
    "span_attributes": {
      "exec_counter": 1,
      "name": "vitest configured span",
      "type": "task",
    },
    "span_id": "<span:5>",
    "tags": [
      "math",
      "configured",
    ],
  },
  {
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "experiment_id": "<uuid:3>",
    "id": "<span:6>",
    "metadata": {
      "case": "concurrent-alpha",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "end": 0,
      "start": 0,
    },
    "output": {
      "phase": "concurrent-alpha",
    },
    "root_span_id": "<span:7>",
    "scores": {
      "pass": 1,
    },
    "span_attributes": {
      "exec_counter": 2,
      "name": "vitest concurrent alpha",
      "type": "task",
    },
    "span_id": "<span:7>",
  },
  {
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "experiment_id": "<uuid:3>",
    "id": "<span:8>",
    "metadata": {
      "case": "concurrent-beta",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "end": 0,
      "start": 0,
    },
    "output": {
      "phase": "concurrent-beta",
    },
    "root_span_id": "<span:9>",
    "scores": {
      "pass": 1,
    },
    "span_attributes": {
      "exec_counter": 3,
      "name": "vitest concurrent beta",
      "type": "task",
    },
    "span_id": "<span:9>",
  },
  {
    "context": {
      "caller_filename": "<repo>/js/src/wrappers/shared/traced-eval.ts",
      "caller_functionname": "runTracedEval",
      "caller_lineno": 0,
    },
    "created": "<timestamp>",
    "error": "expected 'wrong' to be 'right' // Object.is equality

AssertionError: expected 'wrong' to be 'right' // Object.is equality
    at <repo>/e2e/scenarios/wrap-vitest-suite-traces/runner.case.ts:0:0
    at Object.fn (<repo>/js/src/wrappers/vitest/wrapper.ts:0:0)
    at args.experiment.traced.name (<repo>/js/src/wrappers/shared/traced-eval.ts:0:0)
    at <repo>/js/src/logger.ts:0:0
    at AsyncLocalStorage.run (node:<internal>:0:0)
    at BraintrustContextManager.runInContext (<repo>/js/src/logger.ts:0:0)
    at withCurrent (<repo>/js/src/logger.ts:0:0)
    at <repo>/js/src/logger.ts:0:0
    at runCatchFinally (<repo>/js/src/util.ts:0:0)
    at Experiment.traced (<repo>/js/src/logger.ts:0:0)",
    "experiment_id": "<uuid:3>",
    "id": "<span:10>",
    "metadata": {
      "case": "expected-failure",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metrics": {
      "end": 0,
      "start": 0,
    },
    "output": {
      "phase": "expected-failure",
    },
    "root_span_id": "<span:11>",
    "scores": {
      "pass": 0,
    },
    "span_attributes": {
      "exec_counter": 4,
      "name": "vitest expected failure",
      "type": "task",
    },
    "span_id": "<span:11>",
  },
]
`;

exports[`wrap-vitest-suite-traces captures wrapped Vitest task spans (v4) > span-events-v4 1`] = `
[
  {
    "has_input": false,
    "has_output": true,
    "metadata": {
      "case": "simple-pass",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest simple pass",
    "root_span_id": "<span:1>",
    "span_id": "<span:1>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": true,
    "has_output": true,
    "metadata": {
      "case": "configured-span",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest configured span",
    "root_span_id": "<span:2>",
    "span_id": "<span:2>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": false,
    "has_output": true,
    "metadata": {
      "case": "concurrent-alpha",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest concurrent alpha",
    "root_span_id": "<span:3>",
    "span_id": "<span:3>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": false,
    "has_output": true,
    "metadata": {
      "case": "concurrent-beta",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest concurrent beta",
    "root_span_id": "<span:4>",
    "span_id": "<span:4>",
    "span_parents": [],
    "type": "task",
  },
  {
    "has_input": false,
    "has_output": true,
    "metadata": {
      "case": "expected-failure",
      "scenario": "wrap-vitest-suite-traces",
      "testRunId": "<run:1>",
    },
    "metric_keys": [],
    "name": "vitest expected failure",
    "root_span_id": "<span:5>",
    "span_id": "<span:5>",
    "span_parents": [],
    "type": "task",
  },
]
`;
